# pyMSTM

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  devenv.nix  devenv.yaml  flake.nix  meson.build  pyproject.toml
.github/workflows/: publish.yml  test.yml  wheels.yml
examples/: single_sphere.py
scripts/: streamlit_app.py
src/pymstm/: __init__.py  _build.py  _cli.py  _config.py  _convert.py  _inp.py  _inp_parser.py  _mstm.py  _parser.py  _solver.py
src/pymstm/_fortran/: mstm_f2py.f90
src/pymstm/_fortran/patches/: mstm-modules-33-f2py-data-fix.patch  random_configuration-10-f2py-derivedtype-fix.patch  random_configuration-10-license-fix.patch
tests/: test_advanced.py  test_cli.py  test_compatibility.py  test_convert.py  test_f2py_smoke.py  test_inp.py  test_solve.py  test_solver.py  test_tmatrix.py
tests/data/: fractal_sweep.toml
tools/: apply_patch.py  build_f2py_ext.py  wheel_smoke_test.py
