[project]
name = "pymstm"
version = "1.0.0"
description = "Python bindings for the MSTM (Multiple Sphere T-Matrix) Fortran library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "pymstm contributors" }]
keywords = ["t-matrix", "scattering", "electromagnetics", "mie", "optics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Fortran",
]
dependencies = ["numpy>=1.25"]

[project.optional-dependencies]
# Split out from `dev` so publish.yml's release job (which only needs to
# build pymstm itself, per no-build-isolation-package below -- it never
# runs the test suite) can pull in just the compiler tooling without
# pytest/pytest-cov along for the ride.
build-ext = ["meson>=1.1", "ninja", "meson-python>=0.15"]
dev = ["pytest>=7", "pytest-cov", "pymstm[build-ext]"]
dashboard = ["streamlit>=1.28", "pandas>=2.0", "plotly>=5.0", "pydantic>=2.0", "tomli>=2.0; python_version < '3.11'"]
build = ["python-semantic-release ~= 10.0"]

[project.urls]
Repository = "https://github.com/arunoruto/pyMSTM"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.semantic_release]
version_variables = ["src/pymstm/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
# Only the sdist here -- compiled wheels need a per-platform toolchain
# (gfortran, on Linux/macOS separately) that doesn't fit in this single
# job. .github/workflows/publish.yml's build_wheels job builds the actual
# wheels afterwards, against the tag this bump creates, via cibuildwheel.
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build --sdist
"""

[tool.semantic_release.branches.main]
match = "main"

[tool.uv]
# meson-python's editable-install loader hardcodes the absolute path to
# `ninja` (and the meson build dir) that it saw *during the build* into
# `_pymstm_editable_loader.py`, and reuses that exact path on every
# subsequent `import pymstm` to auto-rebuild the extension if sources
# changed. If pymstm is built in `uv`'s default *isolated* build
# environment, that environment (and the ninja binary in it) is deleted
# right after the build finishes, so every later import fails with
# "No such file or directory: .../ninja". Building without isolation
# instead means the build happens in this project's own persistent venv
# (which has meson/ninja via the `dev` extra above), so the recorded path
# stays valid for the life of the venv.
no-build-isolation-package = ["pymstm"]

[build-system]
# meson-python drives meson.build, which in turn shells out to
# `numpy.f2py -c` (see tools/build_f2py_ext.py) to build the _mstm_ext
# extension -- gfortran, meson, ninja, and numpy must be available
# *before* pymstm itself is built (see [tool.uv] no-build-isolation-package
# above) -- meson/ninja come from the `dev` extra, numpy from the runtime
# dependencies, gfortran from the devenv/nix shell.
requires = ["meson-python>=0.15", "numpy>=1.25"]
build-backend = "mesonpy"
